# matrix_v0.1.0

./: db.sqlite3  pyproject.toml  test_animation.py
FirstStand/: asgi.py  manage.py  settings.py  urls.py
FirstStand/FirstStand/: wsgi.py
FirstStand/main/: urls.py  views.py
FirstStand/main/templates/main/: about.html  matrix_rain.html
main/: urls.py  views.py
main/static/main/css/: main.css
main/templates/main/: about.html  layout.html  main.html
news/: forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/templates/news/: create_post_page.html  delete_post_page.html  news_detail.html  news_home.html
